# git-story

./: .env  .env.example  LICENSE  README.md  install.sh  pyproject.toml
git_story/: ai.py  main.py
git_story.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
